--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,12 +4,23 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADING */
+
 .header--main{
     font-weight: normal;
     font: size 50px;
     color: white;
 }
 
+.header--secondary{
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+.header--subheader{
+    font-size: 21px;
+    color: grey;
+}
 .p1--main{
     color: aquamarine;
     font-size: 16px;
